[DSTEW-POC] - Begin submission validation migration