@@ -4,6 +4,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 import java.util.concurrent.atomic.AtomicReference;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -16,27 +17,45 @@ import uk.gov.justice.laa.dstew.payments.claims.validation.core.model.Validation
 import uk.gov.justice.laa.dstew.payments.claims.validation.core.validator.claim.ClaimValidation;
 import uk.gov.justice.laa.dstew.payments.claims.validation.core.validator.claim.ClaimValidationContext;
 import uk.gov.justice.laa.dstew.payments.claims.validation.core.validator.claim.rules.ClaimValidator;
+import uk.gov.justice.laa.dstew.payments.claims.validation.core.validator.submission.SubmissionValidation;
+import uk.gov.justice.laa.dstew.payments.claims.validation.core.validator.submission.SubmissionValidationContext;
+import uk.gov.justice.laa.dstew.payments.claims.validation.core.validator.submission.rules.SubmissionValidator;
 import uk.gov.justice.laa.dstew.payments.claimsdata.model.AreaOfLaw;
+import uk.gov.justice.laa.dstew.payments.claimsdata.model.SubmissionResponse;
 
 /**
  * Tests for {@link ValidationService}.
  *
- * <p>These tests verify that {@link ValidationService} correctly delegates to the
- * {@link ClaimValidation} pipeline and surfaces results to callers. Each overload is tested
- * independently to confirm default argument values are applied correctly. The pipeline's own
- * behaviour — scope filtering, priority ordering, deduplication, and context construction — is
- * tested in ClaimValidationTest.
+ * <p>Verifies that {@link ValidationService} correctly delegates to the {@link ClaimValidation}
+ * and {@link SubmissionValidation} pipelines and surfaces results to callers. Each overload is
+ * tested independently to confirm default argument values are applied correctly. Pipeline-level
+ * Pipeline-level behaviour — scope filtering, priority ordering, and deduplication — is tested in
+ * ClaimValidationTest.
  */
 @DisplayName("ValidationService")
 class ValidationServiceTest {
 
   private Claim testClaim;
+  private SubmissionResponse testSubmission;
 
   @BeforeEach
   void setUp() {
     testClaim = new Claim();
     testClaim.setAreaOfLaw(AreaOfLaw.LEGAL_HELP);
     testClaim.setOfficeAccountNumber("1A234B");
+
+    testSubmission = new SubmissionResponse();
+    testSubmission.setSubmissionId(UUID.randomUUID());
+  }
+
+  /** Creates a service with the given claim pipeline and an empty submission pipeline. */
+  private static ValidationService withClaims(ClaimValidation claims) {
+    return new ValidationService(claims, new SubmissionValidation(Collections.emptyList()));
+  }
+
+  /** Creates a service with the given submission pipeline and an empty claim pipeline. */
+  private static ValidationService withSubmissions(SubmissionValidation submissions) {
+    return new ValidationService(new ClaimValidation(Collections.emptyList()), submissions);
   }
 
   // ─────────────────────────────────────────────────────────────────────────
@@ -48,12 +67,10 @@ class ValidationServiceTest {
   class SingleArgOverload {
 
     @Test
-    @DisplayName("Returns valid result when claim is valid and no validators raise errors")
+    @DisplayName("Returns valid result when no validators raise errors")
     void returnsValidResultForValidClaim() {
-      ValidationService service =
-          new ValidationService(new ClaimValidation(Collections.emptyList()));
-
-      ValidationResult result = service.validateClaim(testClaim);
+      ValidationResult result = withClaims(new ClaimValidation(Collections.emptyList()))
+          .validateClaim(testClaim);
 
       assertThat(result.getIsValid()).isTrue();
       assertThat(result.getIssues()).isEmpty();
@@ -62,10 +79,8 @@ class ValidationServiceTest {
     @Test
     @DisplayName("Returns MISSING_CLAIM error when claim is null")
     void returnsMissingClaimWhenClaimIsNull() {
-      ValidationService service =
-          new ValidationService(new ClaimValidation(Collections.emptyList()));
-
-      ValidationResult result = service.validateClaim((Claim) null);
+      ValidationResult result = withClaims(new ClaimValidation(Collections.emptyList()))
+          .validateClaim((Claim) null);
 
       assertThat(result.getIsValid()).isFalse();
       assertThat(result.getIssues()).hasSize(1);
@@ -73,21 +88,19 @@ class ValidationServiceTest {
     }
 
     @Test
-    @DisplayName("Runs all scope-agnostic validators (scope defaults to null)")
-    void runsScopeAgnosticValidators() {
+    @DisplayName("Scope defaults to null — all scope-agnostic validators run")
+    void scopeDefaultsToNull() {
       AtomicReference<String> capturedScope = new AtomicReference<>("NOT_SET");
 
-      ClaimValidator scopeCaptor = new ClaimValidator() {
-        @Override
-        public List<ValidationIssue> validate(Claim claim, ClaimValidationContext ctx) {
+      ClaimValidator captor = new ClaimValidator() {
+        @Override public List<ValidationIssue> validate(Claim c, ClaimValidationContext ctx) {
           capturedScope.set(ctx.getScope());
           return List.of();
         }
-        @Override public String getValidatorCode() { return "SCOPE_CAPTOR"; }
+        @Override public String getValidatorCode() { return "CAPTOR"; }
       };
 
-      new ValidationService(new ClaimValidation(List.of(scopeCaptor)))
-          .validateClaim(testClaim);
+      withClaims(new ClaimValidation(List.of(captor))).validateClaim(testClaim);
 
       assertThat(capturedScope.get()).isNull();
     }
@@ -99,44 +112,40 @@ class ValidationServiceTest {
 
   @Nested
   @DisplayName("validateClaim(Claim, String) — two-arg overload")
-  class TwoArgOverload {
+  class TwoArgClaimOverload {
 
     @Test
     @DisplayName("Passes scope through to the pipeline")
     void passesScopeToPipeline() {
       AtomicReference<String> capturedScope = new AtomicReference<>();
 
-      ClaimValidator scopeCaptor = new ClaimValidator() {
-        @Override
-        public List<ValidationIssue> validate(Claim claim, ClaimValidationContext ctx) {
+      ClaimValidator captor = new ClaimValidator() {
+        @Override public List<ValidationIssue> validate(Claim c, ClaimValidationContext ctx) {
           capturedScope.set(ctx.getScope());
           return List.of();
         }
-        @Override public String getValidatorCode() { return "SCOPE_CAPTOR"; }
+        @Override public String getValidatorCode() { return "CAPTOR"; }
       };
 
-      new ValidationService(new ClaimValidation(List.of(scopeCaptor)))
-          .validateClaim(testClaim, "submission");
+      withClaims(new ClaimValidation(List.of(captor))).validateClaim(testClaim, "submission");
 
       assertThat(capturedScope.get()).isEqualTo("submission");
     }
 
     @Test
-    @DisplayName("Passes empty related claims list to the pipeline")
-    void passesEmptyRelatedClaimsToPipeline() {
+    @DisplayName("Related claims defaults to empty list")
+    void relatedClaimsDefaultsToEmptyList() {
       AtomicReference<List<Claim>> capturedRelated = new AtomicReference<>();
 
-      ClaimValidator relatedCaptor = new ClaimValidator() {
-        @Override
-        public List<ValidationIssue> validate(Claim claim, ClaimValidationContext ctx) {
+      ClaimValidator captor = new ClaimValidator() {
+        @Override public List<ValidationIssue> validate(Claim c, ClaimValidationContext ctx) {
           capturedRelated.set(ctx.getRelatedClaims());
           return List.of();
         }
-        @Override public String getValidatorCode() { return "RELATED_CAPTOR"; }
+        @Override public String getValidatorCode() { return "CAPTOR"; }
       };
 
-      new ValidationService(new ClaimValidation(List.of(relatedCaptor)))
-          .validateClaim(testClaim, "fee");
+      withClaims(new ClaimValidation(List.of(captor))).validateClaim(testClaim, "fee");
 
       assertThat(capturedRelated.get()).isEmpty();
     }
@@ -144,13 +153,10 @@ class ValidationServiceTest {
     @Test
     @DisplayName("Returns MISSING_CLAIM error when claim is null")
     void returnsMissingClaimWhenClaimIsNull() {
-      ValidationService service =
-          new ValidationService(new ClaimValidation(Collections.emptyList()));
-
-      ValidationResult result = service.validateClaim(null, "fee");
+      ValidationResult result = withClaims(new ClaimValidation(Collections.emptyList()))
+          .validateClaim(null, "fee");
 
       assertThat(result.getIsValid()).isFalse();
-      assertThat(result.getIssues()).hasSize(1);
       assertThat(result.getIssues().getFirst().getCode()).isEqualTo("MISSING_CLAIM");
     }
   }
@@ -160,31 +166,28 @@ class ValidationServiceTest {
   // ─────────────────────────────────────────────────────────────────────────
 
   @Nested
-  @DisplayName("validateClaim(Claim, String, List) — full three-arg overload")
-  class ThreeArgOverload {
+  @DisplayName("validateClaim(Claim, String, List) — three-arg overload")
+  class ThreeArgClaimOverload {
 
     @Test
-    @DisplayName("Returns valid result with no issues when no validators raise errors")
+    @DisplayName("Returns valid result when no validators raise errors")
     void returnsValidResultWhenNoIssues() {
-      ValidationService service =
-          new ValidationService(new ClaimValidation(Collections.emptyList()));
-
-      assertThat(service.validateClaim(testClaim, "fee", List.of()).getIsValid()).isTrue();
+      assertThat(withClaims(new ClaimValidation(Collections.emptyList()))
+          .validateClaim(testClaim, "fee", List.of()).getIsValid()).isTrue();
     }
 
     @Test
     @DisplayName("Returns invalid result when a validator raises an ERROR issue")
     void returnsInvalidResultWhenErrorIssueFound() {
       ClaimValidator errorValidator = new ClaimValidator() {
-        @Override
-        public List<ValidationIssue> validate(Claim claim, ClaimValidationContext ctx) {
+        @Override public List<ValidationIssue> validate(Claim c, ClaimValidationContext ctx) {
           return List.of(ValidationIssue.builder()
               .code("TEST_ERROR").message("error").severity(ValidationSeverity.ERROR).build());
         }
-        @Override public String getValidatorCode() { return "TEST_ERROR_VALIDATOR"; }
+        @Override public String getValidatorCode() { return "ERROR_VALIDATOR"; }
       };
 
-      ValidationResult result = new ValidationService(new ClaimValidation(List.of(errorValidator)))
+      ValidationResult result = withClaims(new ClaimValidation(List.of(errorValidator)))
           .validateClaim(testClaim, "fee", List.of());
 
       assertThat(result.getIsValid()).isFalse();
@@ -195,17 +198,15 @@ class ValidationServiceTest {
     @DisplayName("Returns valid result when validators raise only WARNING issues")
     void returnsValidResultWithWarningsOnly() {
       ClaimValidator warningValidator = new ClaimValidator() {
-        @Override
-        public List<ValidationIssue> validate(Claim claim, ClaimValidationContext ctx) {
+        @Override public List<ValidationIssue> validate(Claim c, ClaimValidationContext ctx) {
           return List.of(ValidationIssue.builder()
-              .code("TEST_WARNING").message("warn").severity(ValidationSeverity.WARNING).build());
+              .code("WARN").message("warn").severity(ValidationSeverity.WARNING).build());
         }
-        @Override public String getValidatorCode() { return "TEST_WARNING_VALIDATOR"; }
+        @Override public String getValidatorCode() { return "WARN_VALIDATOR"; }
       };
 
-      ValidationResult result =
-          new ValidationService(new ClaimValidation(List.of(warningValidator)))
-              .validateClaim(testClaim, null, List.of());
+      ValidationResult result = withClaims(new ClaimValidation(List.of(warningValidator)))
+          .validateClaim(testClaim, null, List.of());
 
       assertThat(result.getIsValid()).isTrue();
       assertThat(result.getIssues().getFirst().getSeverity()).isEqualTo(ValidationSeverity.WARNING);
@@ -214,13 +215,113 @@ class ValidationServiceTest {
     @Test
     @DisplayName("Returns MISSING_CLAIM error when claim is null")
     void returnsMissingClaimWhenClaimIsNull() {
-      ValidationService service =
-          new ValidationService(new ClaimValidation(Collections.emptyList()));
-
-      ValidationResult result = service.validateClaim(null, "fee", List.of());
+      ValidationResult result = withClaims(new ClaimValidation(Collections.emptyList()))
+          .validateClaim(null, "fee", List.of());
 
       assertThat(result.getIsValid()).isFalse();
       assertThat(result.getIssues().getFirst().getCode()).isEqualTo("MISSING_CLAIM");
+    }
+  }
+
+  // ─────────────────────────────────────────────────────────────────────────
+  // validateSubmission(SubmissionResponse)
+  // ─────────────────────────────────────────────────────────────────────────
+
+  @Nested
+  @DisplayName("validateSubmission(SubmissionResponse) — single-arg overload")
+  class SingleArgSubmissionOverload {
+
+    @Test
+    @DisplayName("Returns valid result when no validators raise errors")
+    void returnsValidResultWhenNoIssues() {
+      ValidationResult result = withSubmissions(new SubmissionValidation(Collections.emptyList()))
+          .validateSubmission(testSubmission);
+
+      assertThat(result.getIsValid()).isTrue();
+    }
+
+    @Test
+    @DisplayName("Returns invalid result when a validator raises an ERROR issue")
+    void returnsInvalidResultWhenErrorIssueFound() {
+      SubmissionValidator errorValidator = new SubmissionValidator() {
+        @Override public void validate(SubmissionResponse s, SubmissionValidationContext ctx) {
+          ctx.addValidationError(ValidationIssue.builder()
+              .code("SUB_ERROR").message("err").severity(ValidationSeverity.ERROR).build());
+        }
+        @Override public int priority() { return 0; }
+      };
+
+      ValidationResult result = withSubmissions(new SubmissionValidation(List.of(errorValidator)))
+          .validateSubmission(testSubmission);
+
+      assertThat(result.getIsValid()).isFalse();
+      assertThat(result.getIssues().getFirst().getCode()).isEqualTo("SUB_ERROR");
+    }
+
+    @Test
+    @DisplayName("Scope defaults to null — all scope-agnostic validators run")
+    void scopeDefaultsToNull() {
+      AtomicReference<String> capturedScope = new AtomicReference<>("NOT_SET");
+
+      SubmissionValidator captor = new SubmissionValidator() {
+        @Override public void validate(SubmissionResponse s, SubmissionValidationContext ctx) { /* no-op */ }
+        @Override public boolean appliesTo(String scope) {
+          capturedScope.set(scope);
+          return true;
+        }
+        @Override public int priority() { return 0; }
+      };
+
+      withSubmissions(new SubmissionValidation(List.of(captor))).validateSubmission(testSubmission);
+
+      assertThat(capturedScope.get()).isNull();
+    }
+  }
+
+  // ─────────────────────────────────────────────────────────────────────────
+  // validateSubmission(SubmissionResponse, String)
+  // ─────────────────────────────────────────────────────────────────────────
+
+  @Nested
+  @DisplayName("validateSubmission(SubmissionResponse, String) — two-arg overload")
+  class TwoArgSubmissionOverload {
+
+    @Test
+    @DisplayName("Passes scope through to the pipeline")
+    void passesScopeToPipeline() {
+      AtomicReference<String> capturedScope = new AtomicReference<>();
+
+      SubmissionValidator captor = new SubmissionValidator() {
+        @Override public void validate(SubmissionResponse s, SubmissionValidationContext ctx) { /* no-op */ }
+        @Override public boolean appliesTo(String scope) {
+          capturedScope.set(scope);
+          return true;
+        }
+        @Override public int priority() { return 0; }
+      };
+
+      withSubmissions(new SubmissionValidation(List.of(captor)))
+          .validateSubmission(testSubmission, "pre-process");
+
+      assertThat(capturedScope.get()).isEqualTo("pre-process");
+    }
+
+    @Test
+    @DisplayName("Returns valid result when validators raise only WARNING issues")
+    void returnsValidResultWithWarningsOnly() {
+      SubmissionValidator warningValidator = new SubmissionValidator() {
+        @Override public void validate(SubmissionResponse s, SubmissionValidationContext ctx) {
+          ctx.addValidationError(ValidationIssue.builder()
+              .code("SUB_WARN").message("warn").severity(ValidationSeverity.WARNING).build());
+        }
+        @Override public int priority() { return 0; }
+      };
+
+      ValidationResult result = withSubmissions(new SubmissionValidation(List.of(warningValidator)))
+          .validateSubmission(testSubmission, null);
+
+      assertThat(result.getIsValid()).isTrue();
+      assertThat(result.getIssues().getFirst().getSeverity()).isEqualTo(ValidationSeverity.WARNING);
     }
   }
 }
